# GPT-SoVITS

./: main.py  pyproject.toml  メモ.md
GPT_SoVITS/: inference_webui.py
GPT_SoVITS/test_data/: ref_text.txt  target_text.txt
GPT_SoVITS/w_utils/: const.py  get_phones.py  get_spec.py  text_cutter.py
