[project]
name = "gpt-sovits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "attrdict>=2.0.1",
    "chardet>=5.2.0",
    "cn2an>=0.5.23",
    "fast-langdetect>=0.2.5",
    "fastapi<0.112.2",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "funasr==1.0.27",
    "g2p-en>=2.1.0",
    "g2pk2>=0.0.3",
    "gradio>=4.0,<=4.24.0",
    "jieba>=0.42.1",
    "jieba-fast>=0.53",
    "ko-pron>=1.3",
    "librosa==0.9.2",
    "modelscope==1.10.0",
    "numba==0.56.4",
    "numpy==1.23.4",
    "onnxruntime>=1.20.1 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.20.1 ; sys_platform != 'darwin'",
    "opencc==1.1.1 ; sys_platform == 'linux'",
    "opencc>=1.1.1 ; sys_platform != 'linux'",
    "peft>=0.14.0",
    "psutil>=7.0.0",
    "pyopenjtalk>=0.3.4",
    "pypinyin>=0.53.0",
    "python-mecab-ko>=1.3.7 ; sys_platform != 'win32'",
    "pytorch-lightning>=2.5.0.post0",
    "pyyaml>=6.0.2",
    "rotary-embedding-torch>=0.8.6",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "split-lang>=2.1.0",
    "tensorboard>=2.19.0",
    "tojyutping>=3.2.0",
    "torchaudio>=2.4.1",
    "torchmetrics<=1.5",
    "tqdm>=4.67.1",
    "transformers>=4.43",
    "wordsegment>=1.3.1",
    "x-transformers>=2.1.2",
]
